adding ocr tool
